--- a/app/views/lines/show.html.erb
+++ b/app/views/lines/show.html.erb
@@ -5,3 +5,5 @@
                         :data => {:confirm => "You sure?",
                         :method => "delete"},
                         :class => "btn btn-danger" %></p>
+
+<p><%= link_to "Home", lines_path, :class => "btn btn-default" %></p>
