add checkbox for assigning lines to stations

--- a/app/views/stations/show.html.erb
+++ b/app/views/stations/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @station.name %></h1>
 
 <ul>
-<% @lines.each do |i| %>
+<% @station.lines.each do |i| %>
   <li><%= i.name %></li>
   <% end %>
 </ul>
