--- a/app/views/stops/show.html.erb
+++ b/app/views/stops/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @stop.name %></h1>
+<h1><%= @stop.id %></h1>
 <h2>Line: <%= @stop.line.name %></h2>
 <h2>Station: <%= @stop.station.name %></h2>
 
